# rust_text_editor

./: .envrc  Cargo.toml  READ.md  README.md  editor_log  test.rs  test.txt
.config/: config.json5
core/: Cargo.toml  build.rs
core/src/: app.rs  buffer.rs  cli.rs  components.rs  cursor.rs  editor.rs  main.rs  mode.rs  movements.rs  old_utils.rs  prompt.rs  text.rs  utils.rs  window.rs
src/: action.rs  app.rs  buffer.rs  cli.rs  component.rs  components.rs  config.rs  cursor.rs  editor.rs  event.rs  frame.rs  keyboard.rs  lib.rs  main.rs  mode.rs  screen.rs  status_message.rs  symbols.rs  terminal.rs  text.rs  utils.rs  window.rs
src/components/: editor.rs  mod.rs  window.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
text/: Cargo.toml
text/src/: lib.rs
