[package]
name = "syntax"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
text = { path = "../text" }

ropey = "1.6.1"
ratatui = { version = "0.26.2", features = ["serde", "macros"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
